<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_landingpage">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_github"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="45dp"
                android:layout_marginStart="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_tab_landingpage"
                android:textColor="@color/greyWhite"
                android:textStyle="normal"
                android:textSize="15sp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="80dp"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_marginTop="152dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView">

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/img_landingpage"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/e"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/intro_home"/>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>










